BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/NDGManagementMember__c.object-meta.xml
<CustomObject>
    <label>Referente NDG</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Referente NDG Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referenti NDG</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>