BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/EA_IdCed__c.field-meta.xml
<CustomField>
    <fullName>EA_IdCed__c</fullName>
    <formula>PTF_Gestore__r.PTF_User__r.idced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EA_IdCed</label>
    <type>Text</type>
</CustomField>