BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/Id_oggetto_sorgente__c.field-meta.xml
<CustomField>
    <fullName>Id_oggetto_sorgente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Id oggetto sorgente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>