BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_ABI__c.field-meta.xml
<CustomField>
    <fullName>PTF_ABI__c</fullName>
    <formula>PTF_NDG__r.FinServ__BankNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABI</label>
    <type>Text</type>
</CustomField>