BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_Accordato__c.field-meta.xml
<CustomField>
    <fullName>PTF_Accordato__c</fullName>
    <formula>PTF_NDG__r.PTF_Accordato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accordato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>