BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_AutoDP__c.field-meta.xml
<CustomField>
    <fullName>PTF_AutoDP__c</fullName>
    <formula>AND (
				RecordType.DeveloperName = &apos;DoppioPresidio&apos;,
				PTF_NDG__r.PTF_ModelloDiServizio__c = &apos;Private&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DP Automatico</label>
    <type>Checkbox</type>
</CustomField>