BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_CheckBanca__c.field-meta.xml
<CustomField>
    <fullName>PTF_CheckBanca__c</fullName>
    <formula>AND (OR (PTF_NDG__r.PTF_Banca__r.PTF_IdCED__c == $User.idced__c, PTF_NDG__r.PTF_Banca__r.PTF_IdCED__c == $User.PTF_IdCEDPadre__c), OR($User.idced__c != null, $User.PTF_IdCEDPadre__c != null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Banca</label>
    <type>Checkbox</type>
</CustomField>