BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_CheckDR__c.field-meta.xml
<CustomField>
    <fullName>PTF_CheckDR__c</fullName>
    <formula>OR ( AND(PTF_NDG__r.PTF_DirezioneRegionale__r.PTF_IdCED__c == $User.idced__c, $User.idced__c != null), AND(PTF_NDG__r.PTF_DirezioneRegionale__r.PTF_IdCED__c == $User.PTF_IdCEDPadre__c, $User.PTF_TipologiaUO__c = &apos;AltraUnitaOrganizzativa&apos;, $User.PTF_IdCEDPadre__c != null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check DR</label>
    <type>Checkbox</type>
</CustomField>