BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_CheckFiliale__c.field-meta.xml
<CustomField>
    <fullName>PTF_CheckFiliale__c</fullName>
    <formula>AND(PTF_NDG__r.PTF_Filiale__r.PTF_IdCED__c == $User.idced__c, $User.idced__c != null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Filiale</label>
    <type>Checkbox</type>
</CustomField>