BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_EndDate_DT__c.field-meta.xml
<CustomField>
    <fullName>PTF_EndDate_DT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date (DateTime)</label>
    <type>DateTime</type>
</CustomField>