BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_Filiale__c.field-meta.xml
<CustomField>
    <fullName>PTF_Filiale__c</fullName>
    <formula>PTF_NDG__r.PTF_FilialeNoEncryption__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filiale</label>
    <type>Text</type>
</CustomField>