BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_Gestore__c.field-meta.xml
<CustomField>
    <fullName>PTF_Gestore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Storico_Referenti_NDG</relationshipName>
    <type>Lookup</type>
</CustomField>