BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_HistoryRole__c.field-meta.xml
<CustomField>
    <fullName>PTF_HistoryRole__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PTF HistoryRole</label>
    <length>255</length>
    <type>Text</type>
</CustomField>