BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_HistoryRoleCode__c.field-meta.xml
<CustomField>
    <fullName>PTF_HistoryRoleCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PTF HistoryRoleCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>