BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_IsActive__c.field-meta.xml
<CustomField>
    <fullName>PTF_IsActive__c</fullName>
    <formula>ISBLANK(PTF_EndDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>