BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_IsDRVisible__c.field-meta.xml
<CustomField>
    <fullName>PTF_IsDRVisible__c</fullName>
    <formula>AND(
PTF_NDG__r.PTF_DirezioneRegionale__r.PTF_IdCED__c != null,
CONTAINS ( $User.PTF_DirezioniRegionaliVisibili__c , PTF_NDG__r.PTF_DirezioneRegionale__r.PTF_IdCED__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is DR visible</label>
    <type>Checkbox</type>
</CustomField>