BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_IsGruppo__c.field-meta.xml
<CustomField>
    <fullName>PTF_IsGruppo__c</fullName>
    <formula>OR (
$Profile.Name = &apos;NEC_D.1&apos;,
$Profile.Name = &apos;NEC_D.10&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Gruppo</label>
    <type>Checkbox</type>
</CustomField>