BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_IsSuperuser__c.field-meta.xml
<CustomField>
    <fullName>PTF_IsSuperuser__c</fullName>
    <formula>OR (CONTAINS($Profile.Name, &apos;D.0&apos;),
				CONTAINS($Profile.Name, &apos;Administrator&apos;),
				CONTAINS($Profile.Name, &apos;Amministratore&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Superuser</label>
    <type>Checkbox</type>
</CustomField>