BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_ManageD2__c.field-meta.xml
<CustomField>
    <fullName>PTF_ManageD2__c</fullName>
    <formula>IF (
AND ($Profile.Name = &apos;NEC_D.2&apos;, $User.abi__c = &apos;01015&apos;),
PTF_CheckBanca__c,
AND ($Profile.Name = &apos;NEC_D.2&apos;, $User.abi__c &lt;&gt; &apos;01015&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manage D.2</label>
    <type>Checkbox</type>
</CustomField>