BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_NaturaGiuridicaNDG__c.field-meta.xml
<CustomField>
    <fullName>PTF_NaturaGiuridicaNDG__c</fullName>
    <formula>PTF_NDG__r.PTF_NaturaGiuridica__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Natura Giuridica NDG</label>
    <type>Text</type>
</CustomField>