BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_NDG__c.field-meta.xml
<CustomField>
    <fullName>PTF_NDG__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome NDG</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referenti NDG</relationshipLabel>
    <relationshipName>Storico_Referenti_NDG</relationshipName>
    <type>Lookup</type>
</CustomField>