BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_NDGCode__c.field-meta.xml
<CustomField>
    <fullName>PTF_NDGCode__c</fullName>
    <formula>PTF_NDG__r.CRM_NDG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDG</label>
    <type>Text</type>
</CustomField>