BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_NDGMicroWallet__c.field-meta.xml
<CustomField>
    <fullName>PTF_NDGMicroWallet__c</fullName>
    <formula>PTF_NDG__r.PTF_Portafoglio__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Microportafoglio</label>
    <type>Text</type>
</CustomField>