BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_NomeNDG__c.field-meta.xml
<CustomField>
    <fullName>PTF_NomeNDG__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome NDG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>