BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_NomeReferente__c.field-meta.xml
<CustomField>
    <fullName>PTF_NomeReferente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome Referente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>