BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_NominativoReferente__c.field-meta.xml
<CustomField>
    <fullName>PTF_NominativoReferente__c</fullName>
    <formula>PTF_Gestore__r.FirstName + &quot; &quot; + PTF_Gestore__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Referente</label>
    <type>Text</type>
</CustomField>