BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_OFS_NDG__c.field-meta.xml
<CustomField>
    <fullName>PTF_OFS_NDG__c</fullName>
    <formula>PTF_NDG__r.PTF_OFS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OFS NDG</label>
    <type>Checkbox</type>
</CustomField>