BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_OFS_Referente__c.field-meta.xml
<CustomField>
    <fullName>PTF_OFS_Referente__c</fullName>
    <formula>PTF_Gestore__r.PTF_OFS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OFS Referente</label>
    <type>Checkbox</type>
</CustomField>