BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_Patrimonio__c.field-meta.xml
<CustomField>
    <fullName>PTF_Patrimonio__c</fullName>
    <formula>PTF_NDG__r.PTF_Patrimonio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patrimonio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>