BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_RedditoFatturato__c.field-meta.xml
<CustomField>
    <fullName>PTF_RedditoFatturato__c</fullName>
    <formula>PTF_NDG__r.AnnualRevenue</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reddito/Fatturato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>