BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_ReferenteRole__c.field-meta.xml
<CustomField>
    <fullName>PTF_ReferenteRole__c</fullName>
    <formula>PTF_Gestore__r.PTF_TipologiaRuolo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ruolo referente</label>
    <type>Text</type>
</CustomField>