BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_ReferenteToNdg__c.field-meta.xml
<CustomField>
    <fullName>PTF_ReferenteToNdg__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PTF ReferenteToNdg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>