BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_StartDate__c.field-meta.xml
<CustomField>
    <fullName>PTF_StartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data inizio validità</label>
    <type>Date</type>
</CustomField>