BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/PTF_TipoReferente__c.field-meta.xml
<CustomField>
    <fullName>PTF_TipoReferente__c</fullName>
    <formula>IF (
    PTF_IsPool__c,
				NULL,
				&apos;R&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo referente</label>
    <type>Text</type>
</CustomField>