BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/RecTypeDevName__c.field-meta.xml
<CustomField>
    <fullName>RecTypeDevName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RecTypeDevName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>