BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/RecTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecTypeId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RecTypeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>