BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/fields/SpostamentoUltimaRichiesta__c.field-meta.xml
<CustomField>
    <fullName>SpostamentoUltimaRichiesta__c</fullName>
    <description>Campo utilizzato per tracciare CR/Fix/bonifiche</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Spostamento Ultima Richiesta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>