BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/recordTypes/DoppioPresidio.recordType-meta.xml
<RecordType>
    <fullName>DoppioPresidio</fullName>
    <active>true</active>
    <label>Doppio Presidio</label>
</RecordType>