BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/recordTypes/DoppioPresidioEstero.recordType-meta.xml
<RecordType>
    <fullName>DoppioPresidioEstero</fullName>
    <active>true</active>
    <label>Doppio Presidio Estero</label>
</RecordType>