BPER/DEVF/force-app/main/default/objects/NDGManagementMember__c/recordTypes/DoppioPresidioSviluppo.recordType-meta.xml
<RecordType>
    <fullName>DoppioPresidioSviluppo</fullName>
    <active>true</active>
    <label>Doppio Presidio Sviluppo</label>
</RecordType>